--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,6 +22,10 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:springMVC.xml</param-value>
 		</init-param>
+		<init-param>
+			<param-name>applicationWelcomePage</param-name>
+			<param-value>/user/login</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
